<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ru.ard.warehousscanner.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/port_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ip_label"
                android:layout_alignEnd="@+id/ip_label"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="0dp"
                android:text="@string/port"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/ip_tw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/ip_label"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="-8dp"
                android:layout_toEndOf="@+id/ip_label"
                android:ems="10"
                android:inputType="textPersonName"
                android:minWidth="4dp"
                tools:layout_editor_absoluteX="10dp"
                tools:text="192.168.35.139" />

            <EditText
                android:id="@+id/port_tw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/port_label"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="-8dp"
                android:layout_toEndOf="@+id/port_label"
                android:ems="10"
                android:inputType="textPersonName"
                android:minWidth="4dp"
                tools:layout_editor_absoluteX="10dp"
                tools:text="8080" />

            <EditText
                android:id="@+id/name_tw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/name_label"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="-8dp"
                android:layout_toEndOf="@+id/ip_label"
                android:ems="10"
                android:inputType="textPersonName"
                android:minWidth="4dp"
                tools:layout_editor_absoluteX="10dp"
                tools:text="Фамилия И.О." />

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/port_label"
                android:layout_alignEnd="@+id/ip_label"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="0dp"
                android:text="@string/fio"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/ip_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="64dp"
                android:layout_marginTop="24dp"
                android:text="@string/ip"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/author_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_label"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:text="@string/author"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/author_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/author_label"
                android:layout_alignStart="@+id/author_label"
                android:layout_marginStart="0dp"
                android:layout_marginTop="4dp"
                android:text="@string/author_email"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />
        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/back" />


</RelativeLayout>
