<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ru.ard.warehousscanner.MainActivity">

    <Button
        android:id="@+id/change_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/read_barcode"
        android:layout_alignParentStart="false"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="20dp"
        android:minWidth="2dp"
        android:text="@string/mode_vnc" />

    <TextView
        android:id="@+id/count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/barcode_type"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="0dp"
        android:text="@string/count"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/barcode_type"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/count_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="16sp"
        tools:text="count_"
        android:background="@drawable/border"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:minWidth="80dp"
        android:gravity="center"/>

    <ImageButton
        android:id="@+id/settings_btn"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:src="@drawable/settings" />

    <LinearLayout
        android:id="@+id/id_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="6dp"
        android:layout_toStartOf="@+id/settings_btn"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/wabarticle"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="25sp"
            tools:text="вебартикул"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textAlignment="textEnd"
            tools:text="идентификатор" />


    </LinearLayout>

    <TextView
        android:id="@+id/barcode_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/use_flash"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="16sp"
        tools:text="BARCODE_TYPE"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:minWidth="80dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/barcode_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_above="@+id/barcode_type"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"/>

    <CheckBox
        android:id="@+id/autosend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/send"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="0dp"
        android:checked="false"
        android:text="@string/autosend" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/send"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/send"
        android:text="@string/rescan"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/read_barcode"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="0dp"
        android:text="@string/send"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/read_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/version"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="2dp"
        android:text="@string/read_barcode" />

    <Button
        android:id="@+id/skip"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/clear"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="serif-monospace"
        android:scaleType="fitCenter"
        android:text=">"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/clear"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="0dp"
        android:text="@string/reload"
        tools:visibility="invisible" />

    <CheckBox
        android:id="@+id/use_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/autosend"
        android:layout_alignStart="@+id/autosend"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:checked="false"
        android:text="@string/use_flash" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/clear"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@+id/change_mode" />

    <ScrollView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_above="@+id/barcode_value"
        android:layout_below="@id/horiz_lay"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/border"
        android:paddingLeft="2dp"
        android:paddingRight="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="32sp" />
        </LinearLayout>
    </ScrollView>

    <HorizontalScrollView
        android:id="@+id/horiz_lay"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/id_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/border"
        android:textAlignment="textEnd"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/catalog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                tools:text="строка каталога" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:text="ver.09" />

</RelativeLayout>
